quantos pontos obteve

--- a/views/ajuda.html
+++ b/views/ajuda.html
@@ -21,7 +21,7 @@
     <h2>📋 Regras</h2>
     <ul>
       <li>Não é permitido voltar para perguntas anteriores;</li>
-      <li>Cada resposta correta pode valer de: 1 a 3 ponto (dependendo da dificuldade da pergunta);</li>
+      <li>Cada resposta correta vale ponto dependendo da dificuldade da pergunta. Fáceis: 1, Médias: 2, Difíceis: 3;</li>
       <li>Responda com atenção: apenas uma tentativa por pergunta.</li>
     </ul>
 
