--- a/styles/jogo.css
+++ b/styles/jogo.css
@@ -30,6 +30,7 @@ body {
   margin-bottom: 20px;
 }
 
+/* QUIZ */
 .quiz-container {
   background-color: #fff;
   width: 350px;
@@ -137,13 +138,14 @@ body {
 
 #login-container {
   max-width: 350px;
-  margin: 50px auto;
+  margin: 80px auto;
   padding: 25px;
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   text-align: center;
   font-family: 'Segoe UI', sans-serif;
+  transition: all 0.5s ease;
 }
 
 #login-container h2 {
@@ -233,6 +235,12 @@ body {
   margin: 6px 0;
 }
 
+.pontuacao-footer {
+  margin-top: 10px; 
+  display: flex;
+  justify-content: center;
+}
+
 .ranking-container {
   width: 320px;
   background: #fff;
@@ -270,12 +278,6 @@ body {
   justify-content: space-between;
 }
 
-.pontuacao-footer {
-  margin-top: 10px; 
-  display: flex;
-  justify-content: center;
-}
-
 .ranking-footer {
   margin-top: 15px;
   padding-bottom: 15px;
@@ -299,6 +301,3 @@ body {
   background-color: #16377e;
   transform: scale(1.05);
 }
-
-
-
